<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cliente_gradient"
    tools:context=".AppBar.CardClienteActivity">


    <Button
        android:id="@+id/btnCad"
        android:layout_width="173dp"
        android:layout_height="55dp"
        android:background="@color/colorPrimary"
        android:onClick="cadastrar"
        android:text="@string/btnCad"
        android:textColor="@color/branco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193" />

    <Button
        android:id="@+id/btnListar"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:onClick="listarTodos"
        android:text="@string/btnListar"
        android:textColor="@color/branco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.358" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:onClick="atualizar"
        android:text="@string/btnUpdate"
        android:textColor="@color/branco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.528" />

    <Button
        android:id="@+id/btnDeletar"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:onClick="apagar"
        android:text="@string/btnDeletar"
        android:textColor="@color/branco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.682" />
</androidx.constraintlayout.widget.ConstraintLayout>