<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/cliente_gradient"
    tools:context=".AppBar.MainActivity"
    android:tag="cards main container">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_cliente"
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:layout_marginTop="10dp"
        card_view:cardBackgroundColor="@color/clientegradiente"
        card_view:cardCornerRadius="16dp"
        card_view:cardElevation="16dp"
        card_view:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="367dp"
            android:layout_height="140dp"
            android:layout_margin="0dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="10dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:src="@drawable/baseline_account_box_black_18dp"
                android:tag="image_tag" />


            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="100dp"
                android:layout_marginTop="12dp"
                android:layout_weight="3"
                android:orientation="vertical">


                <Button
                    android:id="@+id/btncardcliente"
                    android:layout_width="166dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="6dp"
                    android:onClick="btncardcliente"
                    android:text="@string/btncardcliente"
                    android:textAppearance="?android:attr/textAppearanceMedium" />


            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_funcionario"
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:layout_marginTop="10dp"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="16dp"
        card_view:cardElevation="16dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="374dp"
            android:layout_height="140dp"
            android:layout_margin="0dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="10dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:src="@drawable/baseline_account_circle_black_18dp"
                android:tag="image_tag" />

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btncardfuncionario"
                    android:layout_width="166dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="6dp"
                    android:onClick="btncardfuncionario"
                    android:text="@string/btncardfuncionario"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_menu"
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:layout_marginTop="10dp"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="16dp"
        card_view:cardElevation="16dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="140dp"
            android:layout_margin="0dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="10dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:src="@drawable/baseline_restaurant_menu_black_18dp"
                android:tag="image_tag" />

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="100dp"
                android:layout_marginTop="12dp"
                android:layout_weight="3"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btncardmenu"
                    android:layout_width="166dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="6dp"
                    android:onClick="btncardmenu"
                    android:text="@string/btncardmenu"
                    android:textAppearance="?android:attr/textAppearanceMedium" />


            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>